--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,68 @@
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.searchBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -10px;
+}
+
+#searchButton {
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  margin-left: -33px;
+  background-color: black;
+  color: white;
+}
+
+#searchButton:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border-color: black;
+}
+
+#searchInput {
+  height: 30px;
+  width: 250px;
+  border-radius: 15px;
+  padding-left: 20px;
+}
+
 .result {
     margin-top: 10px;
+}
+
+.result-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 canvas {
 position: absolute;
 max-width: 400px;
 max-height: 120px;
+margin-top: -40px;
 /* margin-top: -600px;
 margin-left: 420px; */
 }
 
 .description-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    margin-right: auto;
+    margin-left: auto;
     flex-direction: column;
     border: solid black;
-    width: 600px;
+    width: 650px;
+    padding: 10px;
+    border-radius: 20px;
 }
 
 .result-item {
@@ -38,29 +84,37 @@ img {
     width: 400px;
     height: 300px;
     object-fit: cover; /* Crop the image to fit within the specified dimensions */
+    border-radius: 10px;
 }
 
 .legend-container {
-    display: none;
-    margin-top: 40px;
-    margin-left: 420px;
-  }
-  
-  .legend-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 10px;
-  }
-  
-  .legend-color {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
-  }
-  
-  .legend-label {
-    font-size: 12px;
-    margin-right: 10px;
-  }
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 650px; /* Adjust the max-width as needed */
+}
+
+.legend-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-left: 425px;
+}
+
+.legend-color {
+  min-width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+.legend-label {
+  font-size: 12px;
+  margin-right: 10px;
+}
+
   
