--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+body {
+  color: green;
+}
+
 h1 {
   display: flex;
   justify-content: center;
+  color: green;
 }
 
 .searchBar {
@@ -15,15 +20,16 @@ h1 {
   height: 30px;
   border-radius: 15px;
   margin-left: -35px;
-  background-color: black;
+  background-color: green;
   color: white;
+  border-color: rgba(1,1,1,0);
 }
 
 #searchButton:hover {
   cursor: pointer;
   background-color: white;
-  color: black;
-  border-color: black;
+  color: green;
+  border-color: rgba(1,128,1,1);
 }
 
 #searchInput {
@@ -31,7 +37,13 @@ h1 {
   width: 250px;
   border-radius: 17px;
   padding-left: 20px;
-  border: solid 1px;
+  border: solid 1px green;
+  outline: none; /* Remove the default outline */
+  color: green; /* Set the text color when input is clicked */
+}
+
+#searchInput::placeholder {
+  color: green; /* Set the text color for the placeholder text */
 }
 
 .result {
@@ -60,7 +72,7 @@ margin-left: 420px; */
     margin-right: auto;
     margin-left: auto;
     flex-direction: column;
-    border: solid black;
+    border: solid green;
     width: 650px;
     padding: 10px;
     border-radius: 20px;
