minor css modifcations - background image

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,23 @@ margin-left: 420px; */
     width: 650px;
     padding: 10px;
     border-radius: 20px;
+    position: relative;
+    font-size: 15px;
+}
+
+.description-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("images/flowers-g49d7ad89a_1280.jpg");
+  opacity: 0.1; /* Adjust the opacity level as needed */
+  z-index: -1; /* Ensure the pseudo-element is behind the content */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .result-item {
